tests/baselines/reference/parserErrorRecovery_ArgumentList3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList3.ts (3 errors) ====
    function foo() {
       bar(a,
       ~~~
!!! error TS2304: Cannot find name 'bar'.
           ~
!!! error TS2304: Cannot find name 'a'.
       return;
       ~~~~~~
!!! error TS1135: Argument expression expected.
    }